--- a/samplegitrepo/Base.lproj/Main.storyboard
+++ b/samplegitrepo/Base.lproj/Main.storyboard
@@ -21,6 +21,10 @@
                                 <rect key="frame" x="174" y="204" width="82" height="30"/>
                                 <state key="normal" title="getdata"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E39-55-fqc">
+                                <rect key="frame" x="172" y="279" width="66" height="30"/>
+                                <state key="normal" title="storedata"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
